--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ header h1 {
     font-size: 2.5em;
     font-weight: bold;
     margin-bottom: 10px;
+    white-space: nowrap; /* Empêche le texte de passer à la ligne */
 }
 
 .grand-icone {
