--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,9 @@ footer {
 }
 /* 📱 Styles pour les écrans de moins de 768px (tablettes et mobiles) */
 @media (max-width: 768px) {
-
+    header h1 {
+        font-size: 2em; /* Réduit légèrement sur mobile */
+    }
     body {
         font-size: 1.1em; /* Texte un peu plus grand pour mobile */
         padding: 10px;
